@@ -52,19 +52,17 @@ dependencies {
 tasks.withType<Test> {
     useJUnitPlatform()
     jvmArgs("--enable-preview")
-    jvmArgs("--add-modules=jdk.incubator.concurrent") // for unnamed module
 }
 
 tasks.withType<BootRun> {
     jvmArgs("-XX:+UseZGC", "--enable-preview")
-    jvmArgs("--add-modules=jdk.incubator.concurrent") // for unnamed module
 }
 
 tasks.withType<BootBuildImage> {
     if (graalvmEnable) {
         environment.set(
             mapOf(
-                "BP_JVM_VERSION" to "20.*",
+                "BP_JVM_VERSION" to "21.*",
                 "BP_NATIVE_IMAGE" to "true",
                 "BP_NATIVE_IMAGE_BUILD_ARGUMENTS" to "--enable-preview -J-Xmx7g " +
                         "-H:DeadlockWatchdogInterval=10 -H:+DeadlockWatchdogExitOnTimeout " +
@@ -86,7 +84,7 @@ tasks.withType<BootBuildImage> {
         environment.set(
             mapOf(
                 "BP_JVM_TYPE" to "JDK",
-                "BP_JVM_VERSION" to "20",
+                "BP_JVM_VERSION" to "21",
                 "BPE_DELIM_JAVA_TOOL_OPTIONS" to " ",
                 "BPE_APPEND_JAVA_TOOL_OPTIONS" to "-XX:+UseZGC --enable-preview"
             )
@@ -97,7 +95,6 @@ tasks.withType<BootBuildImage> {
 if (graalvmEnable) {
     tasks.withType<ProcessAot> {
         jvmArgs("--enable-preview")
-        jvmArgs("--add-modules=jdk.incubator.concurrent") // for unnamed module
     }
 
     tasks.withType<BuildNativeImageTask> {
@@ -108,7 +105,7 @@ if (graalvmEnable) {
                     ",ch.qos.logback.classic.Level,ch.qos.logback.core.CoreConstants,org.slf4j.MDC" +
                     ",ch.qos.logback.core.util.StatusPrinter,ch.qos.logback.core.util.Loader"
         )
-        options.jvmArgs.addAll("--enable-preview", "--add-modules=jdk.incubator.concurrent") // for unnamed module
+        options.jvmArgs.addAll("--enable-preview")
     }
 }
 
@@ -118,6 +115,6 @@ kotlin {
             apiVersion = "2.0"
         }
     }
-    jvmToolchain(20)
+    jvmToolchain(21)
 }
 
